--- a/Lester.css
+++ b/Lester.css
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-    background-color: #000408;
+    background-color: #8d16a5;
     color: white;
     padding: 40px 0;
     text-align: center;
