--- a/Lester.css
+++ b/Lester.css
@@ -2,20 +2,20 @@ body {
     font-family: 'Roboto', Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f9f9f9;
+    background-color: gray;
     color: #333;
 }
 
 .container {
     width: 80%;
     margin: 0 auto;
+    text-align: center;
 }
 
 header {
-    background-color: #8d16a5;
+    background-color: black;
     color: white;
-    padding: 40px 0;
-    text-align: center;
+    padding: 30px 0;
 }
 
 header h1 {
@@ -46,11 +46,15 @@ nav a {
 }
 
 nav a:hover {
-    color: rgb(3, 43, 128); /* Change color on hover */
+    color: pink;
+}
+
+.pic {
+    height: 500px;
 }
 
 main {
-    background-color: white;
+    background-color: pink;
     padding: 40px;
     margin-top: 20px;
     border-radius: 8px;
@@ -59,6 +63,7 @@ main {
 
 .project {
     margin-bottom: 20px;
+   
 }
 
 @media (max-width: 768px) {
