--- a/Lester.css
+++ b/Lester.css
@@ -50,11 +50,11 @@ nav a:hover {
 }
 
 .pic {
-    height: 500px;
+    height: 600px;
 }
 
 main {
-    background-color: pink;
+    background-color: violet;
     padding: 40px;
     margin-top: 20px;
     border-radius: 8px;
