Adding the repositories

--- a/Lester.css
+++ b/Lester.css
@@ -54,7 +54,7 @@ nav a:hover {
 }
 
 main {
-    background-color: violet;
+    background-color: rgb(130, 238, 184);
     padding: 40px;
     margin-top: 20px;
     border-radius: 8px;
