--- a/Lester.css
+++ b/Lester.css
@@ -3,17 +3,25 @@ body {
     margin: 0;
     padding: 0;
     background-color: gray;
-    color: #333;
+    color: #f5f1f1;
+    text
+}
+.body{
+    background-image: url(Lebron.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+
 }
 
 .container {
     width: 80%;
     margin: 0 auto;
     text-align: center;
+    
 }
 
 header {
-    background-color: black;
+    background-color: transparent;
     color: white;
     padding: 30px 0;
 
@@ -82,7 +90,7 @@ nav a:hover {
 }
 
 main {
-    background-color: rgb(130, 238, 184);
+    
     padding: 40px;
     margin-top: 20px;
     border-radius: 8px;
@@ -108,11 +116,26 @@ main {
         font-size: 16px;
     }
 }
+.contact {
+    text-align: center;
+    color: white;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-bottom: 300px;
+    margin-top: 10px;
+}
+    .title {
+        font-size: 75px;
+        font-weight: bolder;
+        font-family: Verdana;
+        margin-top: 150px;
+    }
+
 .project {
     max-width: 800px;
     margin: 50px auto;
     padding: 20px;
-    background-color: rgb(224, 14, 42);
+    background-color: rgb(44, 2, 7);
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
@@ -123,12 +146,12 @@ main {
 }
 .project h2 {
     font-size: 1.8em;
-    color: #fff;
+    color: #0a0101;
     text-align: center;
 }
 .project a {
     text-decoration: none;
-    color: #fff; 
+    color: #e4e3b7b7; 
     font-weight: bold;
 }
 .project a:hover {
@@ -141,6 +164,101 @@ main {
 text-align: center;
 }
 .project h2{
-    color: black;
+    color: rgb(226, 190, 190);
 }
+.repositories {
+    max-width: 800px;
+    margin: 50px auto;
+    padding: 20px;
+    background-color: rgb(89, 8, 196);
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+    font-family: 'Quicksand', sans-serif;
+}
+.repositories:hover {
+    transform: scale(1.05); 
+}
+    .repositories h2{
+        font-size: 1.8em;
+    color: #d7dfc1c0;
+    text-align: center;
+    }
+    .repositories a {
+        text-decoration: none;
+        color: #f1e9e9; 
+        font-weight: bold;
+    }
+    .repositories a:hover {
+        text-decoration: underline;
+        
+    }
+    .repositories div {
+        margin-bottom: 10px;
+        
+    }
+    .repositories h4 {
+        text-align: center;
+    }
+    .repositories h2 {
+        color: #0a0101;
+    }
+    .person-card {
+        transition: transform 0.3s;
+    }
+    .person-card p{
+        border: none;
+        padding: 10px;
+        margin: 10px;
+        border-radius: 8px;
+        background-color: gray;
+        transition: transform 0.3s;
+    }
+    .person-card:hover {
+        transform: scale(1.1);
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    }
+    
+    .person-card img {
+        width: 20%;
+        border-bottom: 1px solid #ddd;
+        max-width: 100%;
+        border-radius: 50%;
+    }
+    
+    .person-card h5,
+    .person-card p {
+        margin: 10px;
+    }
+    
+    .person-card a {
+        color: #3498db;
+        text-decoration: none;
+    }
+    
+    .person-card a:hover {
+        text-decoration: underline;
+    }
+    button {
+        border: none;
+        background-color: transparent;
+        cursor: pointer;
+        transition: transform 0.3s ease-in-out;
+        
+
+        }
+    
+        button:hover {
+        transform: scale(1.1);
+        }
+    
+        button img {
+        transition: transform 0.3s ease-in-out;
+        }
+    
+        button:hover img {
+        transform: scale(1.1);
+        }
+      
+
     
